--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Update timestamp
         run: |
           date > last_active.txt
-          git config user.name "CodeNinjaEvan"
-          git config user.email "CodeNinjaEvan@email.com"
+          git config user.name "SecretCipher7"
+          git config user.email "zschbmb@proton.me"
           git add .
           git commit -m "chore: auto keep active $(date)"
           git push
